WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103837
[Blackberry] Static code analysis warning fixes
https://bugs.webkit.org/show_bug.cgi?id=103837
Summary
[Blackberry] Static code analysis warning fixes
sfa
Reported
2012-12-02 10:14:34 PST
Klocwork issues: 172, 174, 504, 505, 1488, 1489, 1490, 1491, 514, 516, 1363
Attachments
static analysis patch
(6.20 KB, patch)
2012-12-03 11:08 PST
,
sfa
no flags
Details
Formatted Diff
Diff
style issue fixed in previous patch
(6.23 KB, patch)
2012-12-03 12:38 PST
,
sfa
rwlbuis
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Changelog patch failed to apply
(6.33 KB, patch)
2012-12-04 12:32 PST
,
sfa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
sfa
Comment 1
2012-12-02 10:15:11 PST
add me to cc
Alexey Proskuryakov
Comment 2
2012-12-03 10:32:20 PST
In the past, we sometimes refused to address address static code analysis issues if that degraded code quality. Unless the tool has an unusually high success rate at finding real bugs, we may be better off not subscribing to maintaining it.
sfa
Comment 3
2012-12-03 11:08:20 PST
Created
attachment 177289
[details]
static analysis patch Patch only applies to BlackBerry port of webkit.
sfa
Comment 4
2012-12-03 11:18:53 PST
(In reply to
comment #2
)
> In the past, we sometimes refused to address address static code analysis issues if that degraded code quality. Unless the tool has an unusually high success rate at finding real bugs, we may be better off not subscribing to maintaining it.
Point taken, this patch is specific to the BB port of webkit and as such, it is desired by us to reduce potential future errors by addressing these items (disable op=/copy ctor, etc) over time. The general webkit project needs to decide on source code analysis independently and how the issues should be considered; that is out of scope for this item, sorry for the misunderstanding.
Alexey Proskuryakov
Comment 5
2012-12-03 11:41:24 PST
Thank you for the clarification. One way to reduce confusion is to mark bugs that don't affect other platforms at all is a [Blackberry] prefix - that way, others will know that they don't need to look at the patch. But please use it carefully - even adding a platform specific ifdef to a cross platform file may make it important for core contributors to have a look.
WebKit Review Bot
Comment 6
2012-12-03 12:12:32 PST
Attachment 177289
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/network/blackberry/rss/RSSParserBase.h:27: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
sfa
Comment 7
2012-12-03 12:38:13 PST
Created
attachment 177308
[details]
style issue fixed in previous patch
Rob Buis
Comment 8
2012-12-04 11:32:06 PST
Comment on
attachment 177308
[details]
style issue fixed in previous patch LGTM.
WebKit Review Bot
Comment 9
2012-12-04 12:06:29 PST
Comment on
attachment 177308
[details]
style issue fixed in previous patch Rejecting
attachment 177308
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
8dba0844..9cffc45 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at 9cffc451c10239895188285fa8cdb2dbd36f385d but expected 8dba08445f9c28cad718f832239cd411fb8a245f ! 8dba0844..9cffc45 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15120950
sfa
Comment 10
2012-12-04 12:32:17 PST
Created
attachment 177528
[details]
Changelog patch failed to apply
Rob Buis
Comment 11
2012-12-04 12:33:19 PST
Comment on
attachment 177528
[details]
Changelog patch failed to apply Retrying.
WebKit Review Bot
Comment 12
2012-12-04 20:36:13 PST
Comment on
attachment 177528
[details]
Changelog patch failed to apply Clearing flags on attachment: 177528 Committed
r136626
: <
http://trac.webkit.org/changeset/136626
>
WebKit Review Bot
Comment 13
2012-12-04 20:36:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug