Static code analysis warning fixes https://bugs.webkit.org/show_bug.cgi?id=103837

Patch by Anthony Scian <ascian@rim.com> on 2012-12-04
Reviewed by Rob Buis.

172,174: disable copy ctor, op= in AutofillBackingStore
504,506: disable copy ctor, op= in CookieManager
1488,1491: disable copy ctor, op= in RSSParserBase
1489,1490: disable copy ctor, op= in RSSItem
514,516: disable copy ctor, op= in CredentialBackingStore
1363: m_state not initialized in ctor

* platform/blackberry/CookieManager.h:
* platform/blackberry/PlatformTouchPointBlackBerry.cpp:
(WebCore::PlatformTouchPoint::PlatformTouchPoint):
* platform/network/blackberry/AutofillBackingStore.h:
(AutofillBackingStore):
* platform/network/blackberry/CredentialBackingStore.h:
(CredentialBackingStore):
* platform/network/blackberry/rss/RSSParserBase.h:
(RSSParserBase):

Canonical link: https://commits.webkit.org/122208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136626 268f45cc-cd09-0410-ab3c-d52691b4dbfc